--- a/app/styles/components/_CAColorPanel.scss
+++ b/app/styles/components/_CAColorPanel.scss
@@ -6,6 +6,10 @@
     &.inactive {
         opacity: 0;
         visibility: hidden;
+
+        * {
+            pointer-events:none;
+        }
     }
 
     p {
