--- a/app/views/catalog/course.ejs
+++ b/app/views/catalog/course.ejs
@@ -1,8 +1,15 @@
+<%
+    var courseLink = 'course/' + course.get('subject') + '/' + course.get('catalogNbr'),
+        departmentLink = 'department/' + course.get('subject');
+%>
 <div class="catalog-course course-entry">
     <div class="upper">
-        <span class="tag"><%= course.get('subject') %> <%= course.get('catalogNbr') %></span>
+        <span class="tag">
+            <a href="<%- departmentLink %>"><%= course.get('subject') %></a>
+            <%= course.get('catalogNbr') %>
+        </span>
         <span class="when"><%= course.get('catalogWhenOffered') %></span>
-        <p class="title"><%= course.get('titleLong') %></p>
+        <a href="<%- courseLink %>" class="title"><%= course.get('titleLong') %></a>
     </div>
     <div class="lower">
         <p class="description freight-sans-pro">
