--- a/app/views/catalog/section.ejs
+++ b/app/views/catalog/section.ejs
@@ -1,7 +1,7 @@
 <div class="section">
     <div class="first">
-        <div class="tag"><%= section.get('ssrComponent') %> <%= section.get('catalogNbr') %></div>
-        <div class="classId"><%= section.get('classNbr') %></div>
+        <div class="tag"><%= section.get('ssrComponent') %> <%= section.get('section') %></div>
+        <div class="classId">(<%= section.get('classNbr') %>)</div>
     </div>
     <div class="meetings">
 <%
