--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,7 +5,7 @@
     <link href='/assets/css/style.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <%- include('favicon') %>
 </head>
 <body>
     <div id="cornell-app-mount"><%- reactOutput %></div>
@@ -15,16 +15,7 @@
     </script>
 
     <script src="/assets/js/bundle.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-49504450-2', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+    <%- include('analytics') %>
 
 </body>
 </html>
