--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -51,4 +51,58 @@ $ca-colors: (
             margin-right: 10px;
         }
     }
+
+    .item-header {
+        height: 35px;
+        border-radius: 3px 3px 0 0;
+        color: white;
+        font-size: 13px;
+        padding: 12px 0px 0 33px;
+        box-sizing: border-box;
+        font-weight: 400;
+        @include transition(.13s background ease-in-out);
+
+        .ca-toggle {
+            position: absolute;
+            height: 35px;
+            width: 30px;
+            top: 0px;
+            left: 0px;
+        }
+
+        .ca-close {
+            position: absolute;
+            height: 35px;
+            width: 30px;
+            right: 0;
+            top: 0;
+            text-align: center;
+            font-size: 23px;
+            padding-top: 5px;
+            padding-right: 3px;
+        }
+    }
+
+
+    .ca-color-panel {
+        position: absolute;
+        top: 35px;
+        bottom: 0;
+        right: 0;
+        left: 0;
+    }
+
+    @each $color-name, $color in $ca-colors {
+        &.#{$color-name} {
+            .item-header {
+                background: $color;
+            }
+        }
+    }
+
+    &.inactive {
+        .item-header {
+            background: #919191 !important;
+        }
+    }
 }
