--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -92,6 +92,34 @@ $ca-colors: (
         left: 0;
     }
 
+    select {
+        cursor: pointer;
+        background: transparent;
+        outline: none;
+        color: #535353;
+        font-weight: 500;
+        font-size: 12px;
+        border: none;
+        @include appearance(none);
+        @include transition(.13s all ease-in-out);
+
+        option {
+            padding-right: 15px;
+        }
+
+        &:hover {
+            opacity: .64;
+        }
+    }
+
+    i.dropdown {
+        pointer-events: none;
+        font-size: 15px;
+        line-height: 0;
+        vertical-align: middle;
+        color: #888;
+    }
+
     @each $color-name, $color in $ca-colors {
         &.#{$color-name} {
             .item-header {
