--- a/app/styles/components/_CABasketEvent.scss
+++ b/app/styles/components/_CABasketEvent.scss
@@ -21,8 +21,9 @@
     .item-content {
 
         .day-toggles {
-            padding-top: 3px;
+            padding-top: 7px;
             font-size: 0;
+            margin-left: -5px;
         }
 
         .toggle-item {
@@ -40,7 +41,54 @@
                 margin-top: -5px;
                 font-size: 18px;
                 margin-left: 1px;
+                height: 31px;
             }
+        }
+
+        .selects {
+            padding-top: 7px;
+
+            p {
+                color: #535353;
+                font-size: 13px;
+            }
+
+            select {
+                padding-right: 12px;
+            }
+
+            i {
+                margin-left: -16px;
+                margin-right: 0px;
+            }
+        }
+
+        .location {
+            margin-top: -2px;
+
+            p {
+                color: #535353;
+                font-size: 13px;
+            }
+
+            input {
+                width: 100%;
+                color: #535353;
+                font-size: 13px;
+                font-weight: 400;
+
+                @include placeholder {
+                    font-size: 11px;
+                    font-weight: 400;
+                    top: 1px;
+                    left: 0px;
+                }
+            }
+        }
+
+        .select-wrap {
+            display: inline-block;
+            width: 80px;
         }
     }
 }
