--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -12,57 +12,20 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.2/jquery.timeago.min.js"></script>
     <script>
 <%
         if (typeof context !== 'undefined') {
 %>
-        context = <%- JSON.stringify(context) %>;
+            context = <%- JSON.stringify(context) %>;
 <%
         }
 %>
-
-        <%# Override click action behavior and pass to the parent. %>
-        $(document).on('click', 'a', function(e) {
-            e.preventDefault();
-
-            var href = $(this).attr('href');
-            parent.receiveLink(href);
-        });
-
-        <%# Click on like button. %>
-        $(document).on('click', '.like', function(e) {
-            var liked = $(this).hasClass('liked'),
-                count = parseInt($(this).find('.label').text()),
-                likeDif = liked ? -1 : 1;
-
-            count = count + likeDif;
-
-            $(this).find('.label').text(count);
-            $(this).toggleClass('liked', !liked);
-            $(this).toggleClass('has-likes', !!count);
-
-            $.ajax({
-                type: 'post',
-                url: '/api/like/' + $(this).data('crseid') + '/' +
-                    $(this).data('subject'),
-                data: {
-                    shouldLike: !liked
-                }
-            })
-        });
-
-        <%# Click on add to courses button. %>
-        $(document).on('click', '.add', function(e) {
-            var number = $(this).data('number'),
-                subject = $(this).data('subject');
-
-            var found = _.find(context, function(c) {
-                return c.catalogNbr == number && c.subject == subject;
-            });
-
-            parent.addCourse(found);
+        $(document).ready(function() {
+            $(".timeago").timeago();
         });
     </script>
+    <script src="/assets/js/catalog.js"></script>
     <%- include('analytics') %>
 </body>
 </html>
