starting to refactor all of catalog

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -19,3 +19,4 @@
 @import "components/CAModalAccount";
 @import "components/CAModalEnrollment";
 @import "components/CACatalog";
+@import "components/CACatalogSubjects";
