--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -13,5 +13,10 @@ body {
     }
 }
 
+#cornell-catalog-mount {
+    padding: 32px 55px;
+    background: #FDFDFD;
+}
+
 @import "ui";
 @import "components";
