--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -2,30 +2,22 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link href='/assets/css/catalog.css' rel="stylesheet">
+    <link href='/assets/css/style.css' rel="stylesheet">
     <script src="//use.typekit.net/rfd1tkc.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
     <%- include('favicon') %>
 </head>
 <body>
-    <%- include('catalog/' + type) %>
+    <div id="cornell-catalog-mount"><%- reactOutput %></div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.2/jquery.timeago.min.js"></script>
-    <script>
-<%
-        if (typeof context !== 'undefined') {
-%>
-            context = <%- JSON.stringify(context) %>;
-<%
-        }
-%>
-        $(document).ready(function() {
-            $(".timeago").timeago();
-        });
+    <script id='context' type='application/json'>
+        <%- contextString %>
     </script>
-    <script src="/assets/js/catalog.js"></script>
+<%#
+    $(document).ready(function() {
+        $(".timeago").timeago();
+    });
+%>
     <%- include('analytics') %>
 </body>
 </html>
