--- a/app/views/catalog/like.ejs
+++ b/app/views/catalog/like.ejs
@@ -1,15 +1,11 @@
 <%
-    if (user) {
-        var likeCount = like.length,
-            isLiked = _.some(like, function(l) {
-                    return l.userId == user;
-                }) ? 'liked' : '',
-            hasLikes = likeCount ? 'has-likes' : '';
+    var likeCount = like.length,
+        isLiked = user && _.some(like, function(l) {
+                return l.userId == user;
+            }) ? 'liked' : '',
+        hasLikes = likeCount ? 'has-likes' : '';
 %>
     <div class="ca-catalog-button button like <%= isLiked %> <%= hasLikes %>" data-crseid="<%= course.get('crseId') %>" data-subject="<%= course.get('subject') %>">
         <i class="icon-favorite"></i>
         <span class="label"><%= likeCount %></span>
     </div>
-<%
-    }
-%>
