massive refactoring of catalog

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -20,3 +20,13 @@
 @import "components/CAModalEnrollment";
 @import "components/CACatalog";
 @import "components/CACatalogSubjects";
+@import "components/CACatalogList";
+@import "components/CACatalogItem";
+@import "components/CACatalogCourse";
+@import "components/CACatalogLike";
+@import "components/CACatalogAdd";
+@import "components/CACatalogGroup";
+@import "components/CACatalogSection";
+@import "components/CACatalogMeeting";
+@import "components/CACatalogComments";
+@import "components/CACatalogComment";
