--- a/app/styles/components/_CACatalog.scss
+++ b/app/styles/components/_CACatalog.scss
@@ -40,6 +40,15 @@
         @include transform(translate(-822px, 0px));
         @include transition(all .5s $ios-easing);
 
+        .scroll-area {
+            overflow: scroll;
+            position: absolute;
+            background: white;
+            top: 76px;
+            bottom: 0px;
+            width: 100%;
+        }
+
         .window-bar {
             background: #F4F4F4;
             height: 75px;
@@ -107,6 +116,7 @@
         .navigation-bar {
             padding: 20px 55px 16px;
             border-bottom: 1px solid #E9E9E9;
+            background: #F8F8F8;
 
             .navigation-buttons {
                 vertical-align: middle;
@@ -119,9 +129,9 @@
                     background: #FEFEFE;
                     font-size: 25px;
                     color: #C6C6C6;
-                    height: 34px;
+                    height: 28px;
                     box-sizing: border-box;
-                    width: 30px;
+                    width: 24px;
                     outline: none;
                     cursor: pointer;
                     padding: 0;
@@ -136,6 +146,13 @@
                         background: #F9F9F9;
                         opacity: .5;
                         cursor: default;
+                    }
+
+                    i {
+                        font-size: 24px;
+                        position: relative;
+                        top: -1px;
+                        left: -1px;
                     }
                 }
 
@@ -153,10 +170,10 @@
                 vertical-align: middle;
                 display: inline-block;
                 color: #BC625F;
-                font-size: 24px;
+                font-size: 20px;
                 vertical-align: middle;
                 margin-top: 3px;
-                margin-left: 24px;
+                margin-left: 17px;
                 letter-spacing: .05em;
             }
 
@@ -170,18 +187,22 @@
             }
         }
 
-        .iframe-wrap {
-            position: absolute;
-            top: 179px;
-            bottom: 0;
-            left: 0;
-            right: 0;
-
-            iframe {
-                background: #FEFEFE;
-                width: 100%;
-                height: 100%;
-            }
+        .content-wrap {
+            padding: 32px 55px;
         }
+
+        // .content-wrap {
+        //     position: absolute;
+        //     top: 179px;
+        //     bottom: 0;
+        //     left: 0;
+        //     right: 0;
+
+        //     iframe {
+        //         background: #FEFEFE;
+        //         width: 100%;
+        //         height: 100%;
+        //     }
+        // }
     }
 }
