restructuring of catalog

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -23,6 +23,7 @@
 @import "components/CACatalogList";
 @import "components/CACatalogItem";
 @import "components/CACatalogCourse";
+@import "components/CACatalogSearch";
 @import "components/CACatalogLike";
 @import "components/CACatalogAdd";
 @import "components/CACatalogGroup";
