social features and relayout

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -18,6 +18,7 @@
 @import "components/CAModalActivation";
 @import "components/CAModalAccount";
 @import "components/CAModalEnrollment";
+@import "components/CAModalSendSchedule";
 @import "components/CACatalog";
 @import "components/CACatalogSubjects";
 @import "components/CACatalogList";
@@ -31,3 +32,4 @@
 @import "components/CACatalogMeeting";
 @import "components/CACatalogComments";
 @import "components/CACatalogComment";
+@import "components/CACatalogDifficulty";
