--- a/app/styles/components/_CACatalogCourse.scss
+++ b/app/styles/components/_CACatalogCourse.scss
@@ -4,6 +4,15 @@
         padding-bottom: 15px;
     }
 
+    .add {
+        padding-top: 6px;
+    }
+
+    h3 {
+        color: #717171;
+        font-size: 16px;
+    }
+
     .course-section {
         padding-top: 30px;
 
