--- a/app/styles/components/_CAModalEnrollment.scss
+++ b/app/styles/components/_CAModalEnrollment.scss
@@ -25,4 +25,11 @@
             }
         }
     }
+
+    .empty-message {
+        color: #B2B2B2;
+        font-size: 17px;
+        padding-bottom: 8px;
+        margin-top: -8px;
+    }
 }
