--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,60 +1,4 @@
-@font-face {
-    font-family: 'bunt';
-    src: url('/assets/font/bunt-display-regular-webfont.eot');
-    src: url('/assets/font/bunt-display-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/font/bunt-display-regular-webfont.woff2') format('woff2'),
-         url('/assets/font/bunt-display-regular-webfont.woff') format('woff'),
-         url('/assets/font/bunt-display-regular-webfont.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'bunt';
-    src: url('/assets/font/bunt-display-light-webfont.eot');
-    src: url('/assets/font/bunt-display-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/font/bunt-display-light-webfont.woff2') format('woff2'),
-         url('/assets/font/bunt-display-light-webfont.woff') format('woff'),
-         url('/assets/font/bunt-display-light-webfont.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'bunt';
-    src: url('/assets/font/bunt-display-medium-webfont.eot');
-    src: url('/assets/font/bunt-display-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/font/bunt-display-medium-webfont.woff2') format('woff2'),
-         url('/assets/font/bunt-display-medium-webfont.woff') format('woff'),
-         url('/assets/font/bunt-display-medium-webfont.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'bunt';
-    src: url('/assets/font/bunt-display-thin-webfont.eot');
-    src: url('/assets/font/bunt-display-thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/font/bunt-display-thin-webfont.woff2') format('woff2'),
-         url('/assets/font/bunt-display-thin-webfont.woff') format('woff'),
-         url('/assets/font/bunt-display-thin-webfont.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-	font-family: 'elective';
-	src:url('/assets/font/elective.eot?a2z228');
-	src:url('/assets/font/elective.eot?#iefixa2z228') format('embedded-opentype'),
-		url('/assets/font/elective.ttf?a2z228') format('truetype'),
-		url('/assets/font/elective.woff?a2z228') format('woff'),
-		url('/assets/font/elective.svg?a2z228#elective') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
+@import "bunt";
 
 [class^="icon-"], [class*=" icon-"] {
 	font-family: 'elective';
