--- a/app/styles/components/_CABasketAdder.scss
+++ b/app/styles/components/_CABasketAdder.scss
@@ -1,7 +1,8 @@
 .ca-basket-adder {
-    @include basket-item();
+    position: relative;
     height: 35px;
-    margin-bottom: 12px;
+    border-bottom: 1px solid #E9E9E9;
+    // border-bottom: 1px solid #F4F4F4;
 
     .icon {
         position: absolute;
@@ -23,7 +24,7 @@
         height: 100%;
         width: 100%;
         background: transparent;
-        margin: 0;
+        margin: -1px 0 0 0;
         border: 0;
         padding: 0 8px 0 32px;
         box-sizing: border-box;
@@ -51,11 +52,11 @@
 .autocomplete-suggestions {
     background: white;
     max-height: none !important;
-    margin-top: 6px;
     width: 454px !important;
-    border-radius: 3px;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15);
     color: #424242;
+    margin-top: 2px;
+    border-radius: 0 3px 3px 3px;
 
     .autocomplete-suggestion {
         font-size: 13px;
