--- a/app/styles/components/_CACatalogItem.scss
+++ b/app/styles/components/_CACatalogItem.scss
@@ -49,7 +49,7 @@
         .description {
             padding-bottom: 12px;
             font-weight: 500;
-            color: #8E8E8E;
+            color: #747474;
             font-size: 13px;
             line-height: 1.31;
         }
@@ -65,7 +65,7 @@
         }
 
         .extra-info {
-            color: #8E8E8E;
+            color: #747474;
             font-size: 13px;
             font-weight: 500;
             line-height: 1.24;
