--- a/app/styles/components/_CAScheduleEvent.scss
+++ b/app/styles/components/_CAScheduleEvent.scss
@@ -19,13 +19,30 @@
         font-weight: 500;
     }
 
+    &.large .event-name {
+        font-size: 21px;
+        font-weight: 700;
+    }
+
     .event-location {
         font-size: 10px;
         margin-top: 6px;
     }
 
+    &.large .event-location {
+        font-size: 19px;
+        margin-top: 7px;
+        font-weight: 600;
+    }
+
     .event-time {
         font-size: 9px;
         margin-top: 3px;
+    }
+
+    &.large .event-time {
+        font-size: 18px;
+        margin-top: 6px;
+        font-weight: 600;
     }
 }
