--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="cornell-app-mount"><%- reactOutput %></div>
+    <%- include('footer') %>
 
     <script id='context' type='application/json'>
         <%- contextString %>
