--- a/app/styles/schedule.scss
+++ b/app/styles/schedule.scss
@@ -53,4 +53,12 @@ h3.title {
     margin: 0 auto;
     padding-bottom: 50px;
     @extend .cf;
+
+    .schedule-instance {
+        cursor: default !important;
+
+        &:hover {
+            border: none !important;
+        }
+    }
 }
