--- a/app/styles/components/_CAScheduleInstance.scss
+++ b/app/styles/components/_CAScheduleInstance.scss
@@ -161,19 +161,19 @@
         font-size: 28px;
 
         .instance-headline {
-            font-size: 21px;
-            // font-weight: 700;
+            font-size: 22px;
+            font-weight: 700;
         }
 
         .instance-section-headline {
-            font-size: 17px;
-            // font-weight: 700;
+            font-size: 18px;
+            font-weight: 700;
         }
 
         .instance-location {
-            font-size: 18px;
+            font-size: 19px;
             margin-top: 7px;
-            // font-weight: 600;
+            font-weight: 600;
         }
 
         hr {
@@ -182,16 +182,16 @@
         }
 
         .instance-professor {
-            font-size: 17.5px;
+            font-size: 18.5px;
             margin-top: 16px;
             margin-bottom: -2px;
-            // font-weight: 700;
+            font-weight: 700;
         }
 
         .instance-time {
-            font-size: 16px;
+            font-size: 17px;
             margin-top: 6px;
-            // font-weight: 600;
+            font-weight: 600;
         }
     }
 }
